[gd_scene load_steps=3 format=3 uid="uid://dql1ga7fxb1o2"]

[ext_resource type="Script" path="res://gameover.gd" id="1_xl7g0"]
[ext_resource type="FontFile" uid="uid://b0k28w0xuxdac" path="res://user_interface/fonts/font_1.ttf" id="2_l8154"]

[node name="gameover" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xl7g0")

[node name="gameoverScreen" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.12549, 0.12549, 1)

[node name="gameoverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -18.5
offset_right = 52.0
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_l8154")
text = "GAME OVER"
horizontal_alignment = 1

[node name="scoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -5.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_l8154")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1

[node name="highscoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 7.5
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_l8154")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1
